--- a/src/index.html
+++ b/src/index.html
@@ -65,51 +65,8 @@
 
         <div class="recipe">
 
+            <!--  render the detail of a recipe   -->
             <!--
-            <figure class="recipe__fig">
-                <img src="img/test-1.jpg" alt="Tomato" class="recipe__img">
-                <h1 class="recipe__title">
-                    <span>Pasta with tomato cream sauce</span>
-                </h1>
-            </figure>
-            <div class="recipe__details">
-                <div class="recipe__info">
-                    <svg class="recipe__info-icon">
-                        <use href="img/icons.svg#icon-stopwatch"></use>
-                    </svg>
-                    <span class="recipe__info-data recipe__info-data--minutes">45</span>
-                    <span class="recipe__info-text"> minutes</span>
-                </div>
-                <div class="recipe__info">
-                    <svg class="recipe__info-icon">
-                        <use href="img/icons.svg#icon-man"></use>
-                    </svg>
-                    <span class="recipe__info-data recipe__info-data--people">4</span>
-                    <span class="recipe__info-text"> servings</span>
-
-                    <div class="recipe__info-buttons">
-                        <button class="btn-tiny">
-                            <svg>
-                                <use href="img/icons.svg#icon-circle-with-minus"></use>
-                            </svg>
-                        </button>
-                        <button class="btn-tiny">
-                            <svg>
-                                <use href="img/icons.svg#icon-circle-with-plus"></use>
-                            </svg>
-                        </button>
-                    </div>
-
-                </div>
-                <button class="recipe__love">
-                    <svg class="header__likes">
-                        <use href="img/icons.svg#icon-heart-outlined"></use>
-                    </svg>
-                </button>
-            </div>
-
-
-
             <div class="recipe__ingredients">
                 <ul class="recipe__ingredient-list">
                     <li class="recipe__item">
@@ -120,62 +77,6 @@
                         <div class="recipe__ingredient">
                             <span class="recipe__unit">g</span>
                             pasta
-                        </div>
-                    </li>
-
-                    <li class="recipe__item">
-                        <svg class="recipe__icon">
-                            <use href="img/icons.svg#icon-check"></use>
-                        </svg>
-                        <div class="recipe__count">1/2</div>
-                        <div class="recipe__ingredient">
-                            <span class="recipe__unit">cup</span>
-                            ricotta cheese
-                        </div>
-                    </li>
-
-                    <li class="recipe__item">
-                        <svg class="recipe__icon">
-                            <use href="img/icons.svg#icon-check"></use>
-                        </svg>
-                        <div class="recipe__count">1</div>
-                        <div class="recipe__ingredient">
-                            <span class="recipe__unit"></span>
-                            can of tomatoes, whole or crushed
-                        </div>
-                    </li>
-
-
-                    <li class="recipe__item">
-                        <svg class="recipe__icon">
-                            <use href="img/icons.svg#icon-check"></use>
-                        </svg>
-                        <div class="recipe__count">1</div>
-                        <div class="recipe__ingredient">
-                            <span class="recipe__unit"></span>
-                            can tuna packed in olive oil
-                        </div>
-                    </li>
-
-                    <li class="recipe__item">
-                        <svg class="recipe__icon">
-                            <use href="img/icons.svg#icon-check"></use>
-                        </svg>
-                        <div class="recipe__count">1/2</div>
-                        <div class="recipe__ingredient">
-                            <span class="recipe__unit">cup</span>
-                            grated parmesan cheese
-                        </div>
-                    </li>
-
-                    <li class="recipe__item">
-                        <svg class="recipe__icon">
-                            <use href="img/icons.svg#icon-check"></use>
-                        </svg>
-                        <div class="recipe__count">1/4</div>
-                        <div class="recipe__ingredient">
-                            <span class="recipe__unit">cup</span>
-                            fresh basil, chopped or torn
                         </div>
                     </li>
                 </ul>
