--- a/src/index.html
+++ b/src/index.html
@@ -50,7 +50,6 @@
             </div>
         </header>
 
-
         <div class="results">
             <ul class="results__list">
                 <!--  render recipes hear  -->
@@ -61,54 +60,10 @@
             </div>
         </div>
 
-
-
         <div class="recipe">
-
             <!--  render the detail of a recipe   -->
-            <!--
-            <div class="recipe__ingredients">
-                <ul class="recipe__ingredient-list">
-                    <li class="recipe__item">
-                        <svg class="recipe__icon">
-                            <use href="img/icons.svg#icon-check"></use>
-                        </svg>
-                        <div class="recipe__count">1000</div>
-                        <div class="recipe__ingredient">
-                            <span class="recipe__unit">g</span>
-                            pasta
-                        </div>
-                    </li>
-                </ul>
-
-                <button class="btn-small recipe__btn">
-                    <svg class="search__icon">
-                        <use href="img/icons.svg#icon-shopping-cart"></use>
-                    </svg>
-                    <span>Add to shopping list</span>
-                </button>
-            </div>
-
-            <div class="recipe__directions">
-                <h2 class="heading-2">How to cook it</h2>
-                <p class="recipe__directions-text">
-                    This recipe was carefully designed and tested by
-                    <span class="recipe__by">The Pioneer Woman</span>. Please check out directions at their website.
-                </p>
-                <a class="btn-small recipe__btn" href="http://thepioneerwoman.com/cooking/pasta-with-tomato-cream-sauce/" target="_blank">
-                    <span>Directions</span>
-                    <svg class="search__icon">
-                        <use href="img/icons.svg#icon-triangle-right"></use>
-                    </svg>
-
-                </a>
-            </div>
-            -->
+            <!--  render the detail of its ingredient  -->
         </div>
-
-
-
-
 
         <div class="shopping">
             <h2 class="heading-2">My Shopping List</h2>
